@@ -74,8 +74,9 @@ setMethod("getSnpID",
 # char=TRUE to return character code      
 setMethod("getChromosome",
           signature(object = "SnpAnnotationDataFrame"),
-          function(object, char=FALSE, ...) {
-            var <- getVariable(object, object@chromosomeCol, ...)
+          function(object, index, char=FALSE, ...) {
+            if (missing(index)) index <- TRUE
+            var <- getVariable(object, object@chromosomeCol, index, ...)
             
             # convert to characters
             if (char) {
